# BreezeQRCode

./: .gitignore  CMakeLists.txt  README.md
models/: codev2.onnx
samples/: test_images.cpp
src/: common.h
src/c_api/: c_api.cc  c_api.h
src/dnn_detector/: code_detect.cpp  code_detect.h
